Resolved whitespace right side on profile page

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -14,7 +14,8 @@
     box-shadow: 0.1rem 0.1rem 0.8rem 0.1rem #aa4e26;
 }
 
-#reservation-number {
+#reservation-number,
+#past-reservation-number {
     word-break: break-all;
 }
 
